Unified the keyboard shortcut for the menu entry. Should check for conflicts

--- a/po/ar.po
+++ b/po/ar.po
@@ -1893,7 +1893,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "استبدل الإزاحات بالمسافات"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "استبدل المسافات بالإزاحات"
 
 #: ../data/geany.glade.h:436
