--- a/po/be.po
+++ b/po/be.po
@@ -2022,7 +2022,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Змяняць адступы на прабелы"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Змяняць прабелы на адступы"
 
 #: ../data/geany.glade.h:436
