--- a/po/de.po
+++ b/po/de.po
@@ -2125,7 +2125,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Tabulat_oren durch Leerzeichen ersetzen"
 
 #: ../data/geany.glade.h:454
-msgid "Replace Spaces b_y Tabs..."
+msgid "Replace Spaces with _Tabs..."
 msgstr "_Leerzeichen durch Tabulatoren ersetzen..."
 
 #: ../data/geany.glade.h:455
