--- a/po/el.po
+++ b/po/el.po
@@ -2180,7 +2180,7 @@ msgstr "_Αντικατάσταση των Tab σε Κενά"
 
 #: ../data/geany.glade.h:435
 #, fuzzy
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "_Αντικατάσταση των Tab σε Κενά"
 
 #: ../data/geany.glade.h:436
