--- a/po/fa.po
+++ b/po/fa.po
@@ -2033,8 +2033,8 @@ msgid "_Replace Tabs with Spaces"
 msgstr "_Replace Tabs with Spaces"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
-msgstr "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
+msgstr "Replace Spaces with _Tabs"
 
 #: ../data/geany.glade.h:436
 msgid "_Fold All"
