--- a/po/gl.po
+++ b/po/gl.po
@@ -1823,7 +1823,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Substituí_r tabulacións por espazos"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Substituír espazos por _tabulacións"
 
 #: ../data/geany.glade.h:436
