--- a/po/hi.po
+++ b/po/hi.po
@@ -1895,7 +1895,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr ""
 
 #: ../data/geany.glade.h:436
