--- a/po/id.po
+++ b/po/id.po
@@ -2075,7 +2075,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Ganti Tab dengan Spasi (_R)"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Ganti Spasi dengan Tab (_Y)"
 
 #: ../data/geany.glade.h:436
