--- a/po/ja.po
+++ b/po/ja.po
@@ -1979,7 +1979,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "タブを空白で置換(_R)"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "空白をタブで置換(_Y)"
 
 #: ../data/geany.glade.h:436
