--- a/po/lt.po
+++ b/po/lt.po
@@ -1987,7 +1987,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "_Pakeisti tabuliavimo simbolius tarpais"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Pakeisti _tarpus tabuliavimo simboliais"
 
 #: ../data/geany.glade.h:436
