--- a/po/nl.po
+++ b/po/nl.po
@@ -2030,7 +2030,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Vervang tabs door s_paties"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Vervang spaties door _tabs"
 
 #: ../data/geany.glade.h:436
