--- a/po/ru.po
+++ b/po/ru.po
@@ -2016,7 +2016,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "_Заменить табуляции пробелами"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Заменить пробелы _табуляциями"
 
 #: ../data/geany.glade.h:436
