--- a/po/sv.po
+++ b/po/sv.po
@@ -1992,7 +1992,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Ersätt tab med mellanslag"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Ersätt mellanslag med tab"
 
 #: ../data/geany.glade.h:436
