--- a/po/uk.po
+++ b/po/uk.po
@@ -2122,7 +2122,7 @@ msgstr "_Заміняти відступи пробілами"
 
 #: ../data/geany.glade.h:435
 #, fuzzy
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "_Заміняти відступи пробілами"
 
 #: ../data/geany.glade.h:436
