--- a/po/ca.po
+++ b/po/ca.po
@@ -1054,7 +1054,7 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Elimina els espais i tabulacions sobrants a final de línia"
 
 #: ../data/geany.glade.h:250
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Ree_mplaça Espais per Tabulacions"
 
 #: ../data/geany.glade.h:251
