--- a/po/eu.po
+++ b/po/eu.po
@@ -1902,7 +1902,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "_Ordezkatu tabulazioak zuriuneekin"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Ordezkatu zuriuneak tabulazioekin"
 
 #: ../data/geany.glade.h:436
