--- a/po/he.po
+++ b/po/he.po
@@ -1153,7 +1153,7 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "מסיר רווחים והזחות הנמצאים בסופי שורות"
 
 #: ../data/geany.glade.h:264
-msgid "Replace Spaces b_y Tabs..."
+msgid "Replace Spaces with _Tabs..."
 msgstr "החלפת רווחים בטא_בים..."
 
 #: ../data/geany.glade.h:265 ../src/keybindings.c:570
