--- a/po/nn.po
+++ b/po/nn.po
@@ -1884,7 +1884,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr ""
 
 #: ../data/geany.glade.h:436
