--- a/po/pl.po
+++ b/po/pl.po
@@ -2018,7 +2018,7 @@ msgid "_Replace Tabs with Spaces"
 msgstr "Zamień znaki tabulacji na _spacje"
 
 #: ../data/geany.glade.h:435
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Zamień spacje na znaki _tabulacji"
 
 #: ../data/geany.glade.h:436
