--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1055,7 +1055,7 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Remove espaços e tabulações e finais de linha"
 
 #: ../data/geany.glade.h:250
-msgid "Replace Spaces b_y Tabs"
+msgid "Replace Spaces with _Tabs"
 msgstr "Substituir Es_paços por Tabs"
 
 #: ../data/geany.glade.h:251
