Fix handling of --list-documents when no other instance are running
Properly exit when passed --list-documents, even if no other instance
were already running.  This makes this option behave the same in any
case, making it easier to use in e.g. scripts.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ Geany 1.24 (unreleased)
     * Fix stopping of some spawned commands.
     * Fix cursor position and selection after comment toggling (#3576431).
     * Fix truncated output of ``--list-documents`` command-line option.
+    * Fix launching a new instance when ``--list-documents`` is passed and
+      no other instance is running.
 
     Interface
     * Fix custom GTK styles under KDE (#3607935).
