changed filetypes.latex to add Bibtex compilation

--- a/data/filetypes.latex
+++ b/data/filetypes.latex
@@ -67,6 +67,9 @@ FT_00_BD=false
 FT_01_LB=LaTeX -> _PDF
 FT_01_CM=pdflatex --file-line-error-style "%f"
 FT_01_BD=false
+FT_02_LB=Bibtex
+FT_02_CM=bibtex "%e"
+FT_02_WD=
 EX_00_LB=V_iew PDF File
 EX_00_CM=evince "%e.pdf"
 EX_00_BD=false
