--- a/po/lt.po
+++ b/po/lt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Geany 1.23\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-23 08:53+0200\n"
+"POT-Creation-Date: 2014-03-30 20:46+0200\n"
 "PO-Revision-Date: 2014-03-23 09:01+0200\n"
 "Last-Translator: Algimantas Margevičius <algimantas@margevicius.lt>\n"
 "Language-Team: Lietuvių <>\n"
@@ -277,13 +277,15 @@ msgstr ""
 "paieška, „eiti į eilutę“ laukeliais ir VTE."
 
 #: ../data/geany.glade.h:53
-msgid "Use Windows File Open/Save dialogs"
+#, fuzzy
+msgid "Use Windows native dialogs"
 msgstr "Naudoti langų tvarkyklės „Failas Atverti/Saugoti“ dialogus"
 
 #: ../data/geany.glade.h:54
+#, fuzzy
 msgid ""
-"Defines whether to use the native Windows File Open/Save dialogs or whether "
-"to use the GTK default dialogs"
+"Defines whether to use the Windows native dialogs or whether to use the GTK "
+"default dialogs"
 msgstr ""
 "Nustato ar naudoti langų tvarkyklės failo meniu ar GTK numatytuosius dialogus"
 
@@ -465,8 +467,8 @@ msgid ""
 "Shows a small cross button in the file tabs to easily close files when "
 "clicking on it (requires restart of Geany)"
 msgstr ""
-"Ant failų kortelių rodo mažus mygtukus, su kryžiuku, greitam "
-"užvėrimui(reikės paleisti Geany iš naujo)"
+"Ant failų kortelių rodo mažus mygtukus, su kryžiuku, greitam užvėrimui"
+"(reikės paleisti Geany iš naujo)"
 
 #: ../data/geany.glade.h:95
 msgid "Placement of new file tabs:"
@@ -1000,7 +1002,7 @@ msgstr "Spalva:"
 msgid "Sets the color of the long line marker"
 msgstr "Nustato ilgos eilutės žymeklio spalvą"
 
-#: ../data/geany.glade.h:209 ../src/toolbar.c:70 ../src/tools.c:993
+#: ../data/geany.glade.h:209 ../src/toolbar.c:70 ../src/tools.c:996
 msgid "Color Chooser"
 msgstr "Spalvų parinkiklis"
 
